# DjangoForge

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  django-saas-boilerplate-research.md  docker-compose.yml  manage.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
apps/accounts/: admin.py  forms.py  managers.py  models.py  signals.py  tokens.py  urls.py  utils.py  views.py
apps/api/: permissions.py  serializers.py  throttling.py  urls.py  views.py
apps/audit/: admin.py  models.py  tasks.py  utils.py  views.py
apps/billing/: admin.py  handlers.py  models.py  tasks.py  urls.py  utils.py  views.py
apps/flags/: admin.py  context_processors.py  decorators.py  models.py
apps/notifications/: admin.py  models.py
apps/organizations/: admin.py  context_processors.py  forms.py  managers.py  middleware.py  mixins.py  models.py  urls.py  utils.py  views.py
config/: celery.py  urls.py
config/settings/: base.py  local.py  localdev.py  production.py  testing.py
docs/: README.md
docs/architecture/: background-tasks.md  multi-tenancy.md  overview.md
docs/deployment/: aws-ecs-fargate.md  docker.md
docs/features/: api.md  audit-log.md  authentication.md  billing.md  feature-flags.md  organizations.md
docs/getting-started/: configuration.md  local-development.md  quick-start.md
docs/guides/: adding-a-new-app.md  customizing-templates.md  environment-variables.md  writing-tests.md
infra/terraform/: main.tf  outputs.tf  variables.tf
static/css/: input.css
static/js/: app.js
templates/: base.html  home.html
templates/errors/: 403.html  (+2 more)
tests/: conftest.py  factories.py
(+64 files in other folders)
