[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

[project]
name = "djangoforge"
version = "1.0.0"
description = "Production-ready Django SaaS boilerplate"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6.0",
    "psycopg[binary]>=3.1",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "django-allauth[socialaccount]>=65.0",
    "dj-stripe>=2.8",
    "django-anymail[mailgun]>=10.0",
    "django-storages[s3]>=1.14",
    "django-environ>=0.11",
    "django-axes>=6.5",
    "django-ratelimit>=4.1",
    "django-hijack>=3.4",
    "python-decouple>=3.8",
    "sentry-sdk[django]>=2.0",
    "python-json-logger>=2.0",
    "Pillow>=10.0",
    "whitenoise>=6.6",
    "gunicorn>=21.0",
    "tenacity>=8.2",
    "openai>=1.0",
    "django-redis>=5.4",
    "django-celery-beat>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
    "faker>=24.0",
    "coverage>=7.4",
    "freezegun>=1.4",
    "pytest-cov>=5.0",
    "bandit>=1.7",
    "safety>=3.0",
    "django-debug-toolbar>=4.3",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["test_*.py", "*_test.py"]
addopts = "--reuse-db -v"

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*", "*/management/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true
